[package]
name = "mcu-if"
version = "0.3.1"
edition = "2018"
authors = ["ANIMA Minerva toolkit"]

[lib]
name = "mcu_if"

[features]
default = []
allocator = []

[dependencies]
libc-print = { git = "https://github.com/AnimaGUS-minerva/rust-libc-print", branch = "minerva" }
core2 = { git = "https://github.com/AnimaGUS-minerva/core2", rev = "9138767", default-features = false, features=["compat"] }
